12525 FIX Improve label colors
For the violet <i>explicit</i> labels the label color was too dark in the dark theme and the font color too dark in the light theme. Both stylings are fixed.

SUP-12008

--- a/web/htdocs/themes/facelift/scss/_variables_common.scss
+++ b/web/htdocs/themes/facelift/scss/_variables_common.scss
@@ -45,6 +45,10 @@ $downtime: rgb(0, 170, 255);
 $chaos: rgb(136, 68, 255);
 $site-state-unknown: rgb(169, 99, 148);
 $site-state-partial: rgb(189, 138, 63);
+$tag-color: rgb(0, 168, 181);
+$tag-explicit-color: rgb(119, 72, 152);
+$tag-discovered-color: rgba(243, 174, 75);
+$tag-ruleset-color: rgba(222, 67, 131);
 
 // -----------------------------------------------------------------------------
 // Fonts
